--- a/SOURCE/CCK/CCK/CCK.csproj
+++ b/SOURCE/CCK/CCK/CCK.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilterManager.cs" />
     <Compile Include="Filters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
