Add a Wiki link in the configs

--- a/FOR_RELEASE/GameData/CommunityCategoryKit/common-filters.cfg
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/common-filters.cfg
@@ -1,7 +1,7 @@
 // This file contains filters approved by CCK owners.
 // Do not change this file via ModuleManager! If you need a new filter in
 // the editor you should add it into "extra-filters.cfg".
-// See more info here: TBD for a Wiki link
+// See more info here: https://github.com/BobPalmer/CommunityCategoryKit/wiki
 CCKCommonFilterConfig
 {
   Item
