--- a/FOR_RELEASE/GameData/CommunityCategoryKit/extra-filters.cfg
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/extra-filters.cfg
@@ -19,7 +19,7 @@
 // NOTE. If you want a special icon to be displayed when the filter is active
 // use `selectedIcon` field to define one.
 //
-// See more info here: TBD for a Wiki link
+// See more info here: https://github.com/BobPalmer/CommunityCategoryKit/wiki
 //
 // NOTE. Avoid creating a brand new filter only because you feel you need
 // one. You may improve players experience by re-using filters used by the
