Add Rovers as common category

--- a/FOR_RELEASE/GameData/CommunityCategoryKit/common-filters.cfg
+++ b/FOR_RELEASE/GameData/CommunityCategoryKit/common-filters.cfg
@@ -20,4 +20,13 @@ CCKCommonFilterConfig
     selectedIcon = CommunityCategoryKit/icons/LifeSupport_S
     usedByMod = USI Life Support
   }
+  Item
+  {
+    name = Rovers
+    tag = cck-rovers
+    normalIcon = CommunityCategoryKit/icons/Rovers_N
+    selectedIcon = CommunityCategoryKit/icons/Rovers_S
+    usedByMod = Malemute
+    usedByMod = Feline Utility Rovers
+  }
 }
