--- a/SOURCE/CCK/CCK/CCK.csproj
+++ b/SOURCE/CCK/CCK/CCK.csproj
@@ -67,6 +67,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>IF EXIST "Q:\GameData\CommunityCategoryKit" xcopy "$(TargetPath)" "Q:\GameData\CommunityCategoryKit\" /Y</PostBuildEvent>
+  </PropertyGroup>
+
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
